syntax = "proto3";

package protobuf;

option go_package = "./internal/protobuf";

message TransferRequest {
    string external_id = 1;
    string partner_ref_no = 2;
    string customer_number = 3;
    string account_type = 4;
    string beneficiary_account_no = 5;
    string beneficiary_bank_code = 6;
    string amount = 7;
    string transaction_date = 8;
    string customer_reference = 9;
    string channel = 10;
    string remarks = 11;
    string email = 12;
    string address = 13;
    string citizenship = 14;
    string transfer_purpose = 15;
    string transfer_activity = 16;
    string customer_type = 17;
}